syntax = "proto3";

package gateway;

message DeviceRegistration {
  string device_name = 1;
  string device_type = 2;
  string ip_address = 3;
  int32 port = 4;
}